# folke

./: .gitignore  .gitmodules  CHANGELOG.md  LICENSE  Makefile  Makefile.bak  README.md  Settings.json  TODO.md  bajs.md  bsc-project.cabal  cabal.project  folke.cabal  hi.json
Parser/: AbsLogic.hi  AbsLogic.hs  AbsLogic.hs.bak  DocLogic.txt  LexLogic.hi  LexLogic.x  LexLogic.x.bak  ParLogic.hi  ParLogic.hs  ParLogic.info  ParLogic.y  ParLogic.y.bak  PrintLogic.hi  PrintLogic.hs  PrintLogic.hs.bak  SkelLogic.hi  SkelLogic.hs.bak  TestLogic.hi  test.txt
app/: .Main.hs.swp  Example.hs  Main.hs
assets/docs/: about.md
assets/examples/book/: 1_2_1a.folke  2_3_7a.folke
assets/examples/exams/: exam_161025_4c.folke  exam_161025_5a.folke  exam_161025_5b.folke  exam_171024_2c.folke  exam_181030_3b.folke  exam_191029_3c.folke  exam_201027_3c.folke  exam_201027_3e.folke  exam_211025_3b.folke  exam_211025_3d.folke  exam_220103_4_backward.folke  exam_220815_3a.folke  exam_220815_3b.folke  exam_221024_3a.folke  (+19 more)
backend/P/: DocLogic.txt  DocLogic.txt.bak  LexLogic.hi  LexLogic.x.bak  ParLogic.info  ParLogic.y  ParLogic.y.bak  PrintLogic.hi  PrintLogic.hs  PrintLogic.hs.bak  TestLogic.hi  logic.cf
backend/Parser/: AbsLogic.hi  AbsLogic.hs  LexLogic.x  ParLogic.hs  SkelLogic.hi  SkelLogic.hs  test.txt
custom-Hclip/: Hclip.cabal
custom-Hclip/System/: Hclip.hs
custom-monomer/: ChangeLog.md  LICENSE  README.md  cabal.project  custom-monomer.cabal  default.nix  flake.nix  monomer.cabal
custom-monomer/cbits/: dpi.c  fontmanager.c  fontmanager.h  glew.c  macos_menu.m
custom-monomer/nix/: monomer.nix  qemu.nix
custom-monomer/src/: CreateMenu.hs  Monomer.hs  Paths_monomer.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
docs/: Kritik.md  TODO.md  about.md  user_guide_en.md  welcome.md
docs/examples/: some_example.folke
installer/: README.md  copyAllDLLsHere.sh  installerGenerator.iss
installer/macos/: create_installer.sh  recursive_otool.py
installer/windows/: Readme.txt  copyAllDLLsHere.sh  create_installer.sh  installerGenerator.iss  license.txt
myProofs/: Test.logic  empty.json  empty.logic  emptyConc.logic  exam_250107_1.logic  exam_250107_2.logic  invalid_structure.logic  jsonDoc.json  myFirstProof.logic  myMarkdown.md  mySecondProof.logic  myThirdProof.frontend  myThirdProof.logic  new proof.logic  test.json  test.logic
myProofs/book/: 1_2_1a.json  1_2_1c.json  1_2_1e.json  1_2_1f.json  1_2_1h.json  1_2_1i.json  1_2_1j.json  1_2_1l.json  1_2_1n.json  1_2_1o.json  1_2_1r.json  1_2_1v.json  1_2_1x.json  1_2_1y.json  1_2_2a.json  1_2_2b.json  2_3_7a.json  2_3_7c.json  2_3_9a.json  2_3_9d.json  2_3_9k.json
myProofs/exams/: exam_161025_1a.json  exam_161025_1b.json  exam_161025_1c.json  exam_161025_4c.json  exam_161025_5a.json  exam_161025_5b.json  exam_171024_1a.json  exam_171024_1c.json  exam_171024_2c.json  exam_181030_1a.json  exam_181030_1b.json  exam_181030_1c.json  exam_181030_2c.json  exam_181030_2d.json  exam_181030_3a.json  exam_181030_3b.json  exam_181030_7b.json  exam_191029_1a.json  exam_191029_1b.json  exam_191029_1c.json  exam_191029_3b.json  exam_191029_3c.json  exam_191029_3e.json  exam_201027_1.json  exam_201027_3a.json  exam_201027_3c.json  exam_201027_3e.json  exam_211025_1a.json  exam_211025_1b.json  exam_211025_3b.json  exam_211025_3d.json  exam_220103_1a.json  exam_220103_1b.json  exam_220103_3a.json  exam_220103_3c.json  exam_220103_4_backward.json  exam_220103_4_forward.json  exam_220815_1a.json  exam_220815_1b.json  exam_220815_3a.json  (+46 more)
myProofs/proofs/: andSwap.json  andSwapWithSymbols.json  exam_250107_1.json  exam_250107_1.logic  exam_250107_2.json  exam_250107_2.logic  exam_250107_3a.json  exam_250107_3d.json  fOfZ0isATerm.json  hi.json  myThirdProof.json  myThirdProof.logic  new proof.json  new proof.logic  someExam.json  test.json  test.logic  toCreateAProofYouMustFirstInventTheUniverse.json  toCreateAProofYouMustFirstInventTheUniverse.logic  wanwanwan.json  weAreAllTheSame.json
myProofs/simple_tests/: simple_rule_and_elim_left.json  simple_rule_and_elim_right.json  simple_rule_and_intro.json  simple_rule_bot_elim.json  simple_rule_copy.json  simple_rule_eq_intro.json  simple_rule_if_elim.json  simple_rule_lem.json  simple_rule_mt.json  simple_rule_not.json  simple_rule_notnot_elim.json  simple_rule_notnot_intro.json  simple_rule_or_elim.json  simple_rule_or_intro_left.json  simple_rule_or_intro_right.json  trivial.json
myProofs/tex_proofs/: exam_250107_3d.tex
nativefiledialog-hs/: nativefiledialog.cabal
nativefiledialog-hs/cbits/: fakeError.c  nativefiledialog.c
nativefiledialog-hs/nativefiledialog/src/: nfd_win.cpp
nativefiledialog-hs/src/: NativeFileDialog.hs
proofs/book/: 1_2_1e.json  1_2_1f.json  1_2_1i.json  1_2_1j.json  2_3_7c.json  2_3_9k.json
proofs/exams/: exam_161025_5a.json  exam_181030_3a.json  exam_181030_7b.json  exam_191029_1b.json  exam_201027_3a.json  exam_220103_1b.json  exam_221024_3a.json  exam_221024_3b.json  exam_240103_3d.json  exam_240828_1b_alt3.json  exam_240828_3c.json  exam_250107_1a.json  exam_250107_1b.json
proofs/proofs/: deMorgan2_incorrect.folke  deMorganTest.folke  hi.json
proofs/simple_tests/: simple_rule_and_elim_right.json  simple_rule_mt.json  simple_rule_notnot_elim.json  simple_rule_or_elim.json
proofs/tex_proofs/: submission.tex
src/: Makefile  TODO.md  logic.cf
src/Backend/: .TypeChecker.hs.swp  AuxiliaryTypes.hs  Environment.hs  ExampleSequent.hs  Helpers.hs  MyLib.hs  Rules.hs  TypeChecker.hs  Types.hs
src/Development/: Main.hs
src/Frontend/: BuildUI.hs  Communication.hs  Export.hs  HandleEvent.hs  Helper.hs  History.hs  Main.hs  Parse.hs  Preferences.hs  SpecialCharacters.hs  Themes.hs  Types.hs
src/Logic/: Abs.hs  Lex.hs  Par.hs
src/Parser/: DocLogic.txt.bak  LexLogic.hs  Makefile  Makefile.bak  SkelLogic.hs  TestLogic.hs  logic.cf  test.txt
src/Shared/: FESequent.hs  Messages.hs  SpecialCharacters.hs
test/: Main.hs  MainOld.hs
test/proofs/: simple.logic  simple_and.logic
(+268 files in other folders)
