cabal-version:      3.0

name:               folke

version:            0.1.0.0

license:            BSD-3-Clause

license-file:       LICENSE

author:             lambducas, TheCoder5550, antonnordbeck, Jiep-man, Jagger002

maintainer:         lucasmol@student.chalmers.se

category:           Math
build-type:         Simple

extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Backend.TypeChecker
                    , Backend.Environment
                    , Frontend.Types
                    , Backend.Helpers
                    , Backend.Types
                    , Frontend.Parse
                    , Logic.Abs
                    , Logic.Par
                    , Logic.Lex
                    , Shared.Messages
                    , Frontend.Helper.General
                    , Shared.FESequent
                    , Shared.SpecialCharacters
    build-depends:    base ^>=4.17.2.1
                    , mtl
                    , containers
                    , text
                    , directory
                    , array
                    , aeson
                    , aeson-pretty
                    , bytestring
                    , text-show
                    , lens
                    , monomer
                    , random
                    , process
                    , filepath
                    , stm
                    , utf8-string
                    , extra

    default-extensions: OverloadedStrings
    hs-source-dirs:   src
    default-language: Haskell2010

executable folke
    import:           warnings
    main-is:          Main.hs
    hs-source-dirs:   app
                    , src
                    
    build-depends:    base ^>=4.17.2.1
                , folke
                , data-default
                , lens
                , monomer
                , cmark
                , text
                , text-show
                , directory
                , filepath
                , containers
                , array
                , aeson
                , aeson-pretty
                , bytestring
                , random
                , nativefiledialog
                , tinyfiledialogs
                , process
                , sdl2 >=2.5.0 && <2.7
                , temporary
                , stm
                , utf8-string
                , extra
    other-modules:
                  Backend.TypeChecker
                , Backend.Environment
                , Backend.Helpers
                , Backend.Types
                , Shared.Messages
                , Logic.Abs
                , Logic.Par
                , Logic.Lex
                , Frontend.Main
                , Frontend.Communication
                , Frontend.Types
                , Frontend.BuildUI
                , Frontend.History
                , Frontend.HandleEvent
                , Shared.SpecialCharacters
                , Frontend.Helper.General
                , Frontend.Helper.ProofHelper
                , Frontend.Themes
                , Frontend.Parse
                , Frontend.Preferences
                , Frontend.Export
                , Frontend.Components.RenderMarkdown
                , Frontend.Components.GeneralUIComponents
                , Frontend.Components.RenderProofTab
                , Frontend.Components.Details
                , Shared.Messages
                , Shared.FESequent
    default-language: Haskell2010
    if os(windows)
        ghc-options: Icon.o -fwarn-incomplete-patterns -threaded
    else
        ghc-options: -fwarn-incomplete-patterns -threaded
    default-extensions: OverloadedStrings

test-suite folke-test
    import:           warnings

    default-language: Haskell2010

    type:             exitcode-stdio-1.0

    hs-source-dirs:   test

    main-is:          Main.hs

    build-depends:
        base ^>=4.17.2.1,
        folke,
        HUnit,
        directory,
        filepath,
        array,
        aeson,
        aeson-pretty,
        bytestring,
        text,
        containers,
        text-show

    default-extensions: OverloadedStrings