cabal-version:       3.0
name:                nativefiledialog
version:             0.1.0.0
synopsis:            Haskell bindings for nativefiledialog
description:         Bindings to open cross-platform file dialog from Haskell
license:             ISC
author:              Alfons Nilsson
copyright:           2025 Alfons Nilsson

library
  exposed-modules:     NativeFileDialog
                       
  build-depends:       base >= 4.8 && <5.0
                     , bytestring >= 0.10 && < 0.12
                     , containers >= 0.5 && < 0.7
                     , text >= 1.2 && < 2.1
                     , vector >= 0.11 && < 0.14
  hs-source-dirs:      src
  default-language:    Haskell2010

  include-dirs:        nativefiledialog/src/include
                       cbits

  install-includes:    nfd.h
                       gtk.h

  c-sources:           nativefiledialog/src/nfd_common.c
                       cbits/nativefiledialog.c
                       cbits/fakeError.c
  if os(windows)
    c-sources: nativefiledialog/src/nfd_win.cpp
  else
    c-sources: nativefiledialog/src/nfd_gtk.c

  pkgconfig-depends: gtk+-3.0

  build-tools-depends:     c2hs