cabal-version:       3.0
name:                nativefiledialog
version:             0.1.0.0
synopsis:            Haskell bindings for nativefiledialog
description:         Bindings to open cross-platform file dialog from Haskell
license:             ISC
author:              Alfons Nilsson
copyright:           2025 Alfons Nilsson

library
  exposed-modules:     NativeFileDialog
                       
  build-depends:       base >= 4.8 && <5.0
                     , bytestring >= 0.10 && < 0.12
                     , containers >= 0.5 && < 0.7
                     , text >= 1.2 && < 2.1
                     , vector >= 0.11 && < 0.14
  hs-source-dirs:      src
  default-language:    Haskell2010

  include-dirs:        nativefiledialog/src/include
                       cbits

  if os(windows)
    install-includes:  nfd.h
  if os(linux)
    install-includes:  nfd.h
                       gtk.h
  if os(osx)
    install-includes:  nfd.h

  c-sources:           nativefiledialog/src/nfd_common.c
                       cbits/nativefiledialog.c
                       cbits/fakeError.c
  if os(windows)
    c-sources: nativefiledialog/src/nfd_win.cpp
  if os(linux)
    c-sources: nativefiledialog/src/nfd_gtk.c
  -- Comment these two lines below if building doesn't work on mac
  if os(osx)
    c-sources: nativefiledialog/src/nfd_cocoa.m

  if os(windows)
  else
    pkgconfig-depends: gtk+-3.0

  if os(windows)
    extra-libraries: comctl32
                     ole32
                     oleaut32
                     uuid

  build-tools-depends:     c2hs